# muon-clip

./: .gitignore  LICENSE.txt  MakeFile  Makefile  pyproject.toml  readme.md  requirements.txt  setup.py
doc/: 2506.10935v1.pdf:Zone.Identifier
src/: __init__.py  muon.py  muon_clip.py  muon_pp.py
src/test/: ds_config.json  test.py  test_dist.py
src/utils/: utils.py
src/utils_muon/: __init__.py  qk_hook.py  utils.py
