[project]
name = "muon_clip"
version = "1.0"
description = "MuonClip optimizer"
authors = [{ name="Sinoué GAD" }]
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}