[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "muon_clip"
version = "1.0"
description = "MuonClip optimizer"
authors = [{ name="Sinoué GAD" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "transformers==4.53.0",
    "accelerate",
    "deepspeed",
    "torch",
    "wandb",
    "tensorboard"
]

[tool.uv]
package = false
